fix header color on mobile when scrolling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -139,3 +139,16 @@ a {
     padding: 0 30px;
   }
 }
+
+.headerColor2 header {
+  background-color: rgba(94, 118, 136, 0.7);
+}
+.headerColor2 a,
+.headerColor2 button,
+.headerColor2 select {
+  color: #fff;
+}
+
+/* .headerColor2 select > div {
+  border-color: red;
+} */
